Add encoding, line ending, and zoom controls to editor
Introduces support for detecting, displaying, and changing file encoding and line endings. Adds zoom controls for font size adjustment. Updates status bar to show line, column, position, selection length, encoding, line ending, and zoom. Enhances draft save/load to persist encoding and line ending. Refactors file open/save to respect encoding and line ending settings.